[tool.poetry]
name = "flask-api-study"
version = "0.1.0"
description = ""
authors = ["Caio Ramos <caio.campsv@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
