[tool.poetry]
name = "flask-api-study"
version = "0.1.0"
description = ""
authors = ["Caio Ramos <caio.campsv@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
flask-pydantic-spec = "^0.1.5"

[tool.poetry.dev-dependencies]
httpie = "^2.6.0"
black = {version = "^21.12b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
